[gd_scene load_steps=5 format=3 uid="uid://b26m1c712w8fe"]

[ext_resource type="Script" uid="uid://di7lmhgnaj4xv" path="res://game_management/main_menu/options.gd" id="1_g0cdb"]
[ext_resource type="Theme" uid="uid://oxf8w7asp4eg" path="res://ui/main_theme.tres" id="2_1dw4v"]
[ext_resource type="Texture2D" uid="uid://emxnvvjtxui3" path="res://assets/ui/metal_background.jpg" id="3_nmree"]
[ext_resource type="LabelSettings" uid="uid://dcknxjba7ogpf" path="res://ui/menu_label.tres" id="4_mkfdb"]

[node name="Options" type="Control" groups=["load"]]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g0cdb")

[node name="OptionsCenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -115.0
offset_right = 168.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="OptionsCenterContainer"]
layout_mode = 2
theme = ExtResource("2_1dw4v")

[node name="TextureRect" type="TextureRect" parent="OptionsCenterContainer/PanelContainer"]
modulate = Color(0.5372549, 0.5372549, 0.5372549, 0.9490196)
layout_mode = 2
texture = ExtResource("3_nmree")
expand_mode = 2
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="OptionsCenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 22
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsCenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 23

[node name="VolumeSliderHBoxContainer" type="HBoxContainer" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 29

[node name="Label" type="Label" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSliderHBoxContainer"]
layout_mode = 2
theme = ExtResource("2_1dw4v")
text = "options_volume"
label_settings = ExtResource("4_mkfdb")

[node name="VolumeHSlider" type="HSlider" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSliderHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(109, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_1dw4v")
min_value = -20.0
max_value = 5.0
ticks_position = 3

[node name="HeadbobCheckBox" type="CheckBox" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_1dw4v")
text = "use_headbob"

[node name="MarginContainer2" type="MarginContainer" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="LenguageButton" type="Button" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_1dw4v")
text = "options_lenguage"

[node name="Default" type="Button" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_1dw4v")
text = "def"

[node name="HSeparator" type="HSeparator" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Close" type="Button" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_1dw4v")
text = "back"

[node name="BackToMainMenu" type="Button" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_1dw4v")
text = "main_menu"

[node name="ExitGameButton" type="Button" parent="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_1dw4v")
text = "exit_ game"

[connection signal="value_changed" from="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/VolumeSliderHBoxContainer/VolumeHSlider" to="." method="_on_volume_h_slider_value_changed"]
[connection signal="pressed" from="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/HeadbobCheckBox" to="." method="_on_headbob_check_box_pressed"]
[connection signal="pressed" from="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/LenguageButton" to="." method="_on_lenguage_button_pressed"]
[connection signal="pressed" from="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/Default" to="." method="_on_default_pressed"]
[connection signal="pressed" from="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_pressed"]
[connection signal="pressed" from="OptionsCenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
